test/grammar/types/type_alias/type_alias_err_1/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:3:1
  |
3 | _name: Int = "Green"
  | ^ expected int, got str(Green)
  |